# RumblingStone

./: .gitignore  .pr-body.md  AGENTS.md  CENSIMENTO-MOSTRI-PNG-VILLAIN.md  MAPPE-CENSIMENTO.md  PIANO-DM-TOOLKIT-HYPE-E-ARCHIVIO-PIANI.md  PIANO-REVISIONE-LIBRERIA-MOSTRI-PNG-VILLAIN.md  PIANO-REVISIONE-TRASVERSALE-COERENZA-E-QUALITA.md  README.md
00_Red Hand Of Doom/: Armate-AGGIORNATO.ods  Armate-CALCOLI-ESERCITI-DINAMICI.md  Armate-COMPOSIZIONE-DETTAGLIATA.md  Armate-SINCRONIZZAZIONE-CAMPAGNA.md  Armate.ods  CalcoloPuntiEperiennza.ods  CalcoloPuntiEperienza-current.ods  Monster Lore Compendium Form (Responses).xlsx  campagna_flusso.txt  prompt_chatGpt_per_setting_campagna.md
01_LaMiniera/: Miniera-ita.txt  Miniera.txt  grell necromante.txt  grellPatriarca.txt
03_la Cittadella/: Scontro_davanti_tempio di moradin.txt  il Tempio di Moradin - in fondo guardiano da sx.txt
04_tomba_di_Belkram/: 00_Cubo Gelatinoso powerup.txt  00_t2_Well Camouflaged Pit and.txt  00_torrette_t7 e t11_ sempre 2 per stanza_gargoils.txt  Antenato_Nanico_cr13.html  Black Pudding Black Pudding.txt  t3_stanza.txt  xorn talent.txt
07_il Portale Della Forgia Eterna/: ARC07-00-INDICE.md  ARC07-ATLANTE-ASSET.md  ARC07-CONSEGUENZE-ECHI.md  ARC07-HANDOUTS.md  ARC07-MATRICE-VERSIONI.md  ARC07-TESORO-WBL-AUDIT.md  CORREZIONE-Boss-Fauci.md  ERRATA-ARC07-35-Verification.md  La_Piramide_Ricalibrata.md  PIANO-REVISIONE-ARC07-COERENZA-E-QUALITA.md  PortaleForgia-FINAL-P5.md  PortaleForgia-Interludio-Terra.md  PortaleForgia-P1-REVISED-Corretta.md  PortaleForgia-P2-REVISED-Corretta-PARTE1.md  PortaleForgia-P2-REVISED-Corretta-PARTE2.md  PortaleForgia-P3-PianoFuoco-PARTE1.md  PortaleForgia-P3-PianoFuoco-PARTE2.md  PortaleForgia-P3B-ResurrezioneHella-COMPLETO.md  PortaleForgia-P3B-ResurrezioneHella-RICALIBRATO-alternative.md  PortaleForgia-P4-PianoTerra-COMPLETO-alternative.md  PortaleForgia-P4-PianoTerra-COMPLETO.md  PortaleForgia-P4-PianoTerra-P3B-HELLA-IL-VIAGGIO-NELL'INCUDINE-DEL- MONDO-v2.md  PortaleForgia-P4-PianoTerra-P3B-HELLA-IL-VIAGGIO-NELL'INCUDINE-DEL- MONDO.md  PortaleForgia-P4-PianoTerra-P3B-HELLA-IL-VIAGGIO-NELL'INCUDINE-DEL-MONDO-risultati.md  PortaleForgia-P4-PianoTerra-P3B-HELLA-IL-VIAGGIO-NELL'INCUDINE-DEL-MONDO-v2.md  PortaleForgia-P4-PianoTerra-P3B-HELLA-IL-VIAGGIO-NELL'INCUDINE-DEL-MONDO.md  PortaleForgia-P4-PianoTerra-RICALIBRATO.md  PortaleForgia-P4-pianoTerra-P3b-Hella-il-Viaggio-nell'incudine-del-mondo-risultati.md  PortaleForgia-P5-B4-CARRYOVER-Forgia-Ricorda.md  PortaleForgia-P5-DEFINITIVO-PARTE1.md  PortaleForgia-P5-DEFINITIVO-PARTE2.md  PortaleForgia-P5-FASTPLAY.md  PortaleForgia-P5-RICALIBRATO.md  PortaleForgia-P6-INTEGRAZIONE-Completa.md  Portaleforgia-P6-INTEGRAZIONE-Completa.md  RicalibrazioneScontriPianoDelFuoco.md  Terros.md  temp_sinergie.txt
08_La Battaglia Di Hammerfist/: 00_ATLANTE VISIVO DELLA BATTAGLIA DI HAMMERFIST-complete.md  00_ATLANTE VISIVO DELLA BATTAGLIA DI HAMMERFIST.md  00_Final_hammerfist_battle-La_Mano_Rossa_del_Destino-Guida_Completa_del_DM.md  00_battle_stats_maps-final.md  (+24 more)
Script/pdf-to-md-engine/: .gitignore  CHANGELOG.md  DEPLOYMENT.md  FINAL_TASK_COMPLETION.md  FREE_AI_TOOLS.md  INSTALLATION_COMPARISON.md  MARKITDOWN_INTEGRATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SCRIPT_COMPARISON.md  TROUBLESHOOTING.md  activate.sh  ai_requirements.txt  comprehensive_audit.py  debug_run.py  intelligent_install.py  main.py  one_click_setup.sh  performance_deps.txt  pyproject.toml  quick_ai_setup.py  quick_install.sh  requirements.txt  run_enhanced.py  setup.py  setup_ai.sh  test_enhanced_engine.sh  test_enhanced_extraction.py  test_layout_extraction.py  test_pdf_analyzer.py  verify_project.py
Script/pdf-to-md-engine/src/: ai_enhancer.py  config.py  enhanced_converter.py  enhanced_image_extractor.py  enhanced_processor.py  enhanced_table_detector.py  enhanced_text_extractor.py  enhanced_text_transformer.py  fallback_manager.py  fix_gcc.sh  intelligent_selector.py  layout_processor.py  math_processor.py  pdf_analyzer.py  pdf_text_analyzer.py  pdf_text_operators.py  pdf_utilities.py  processor.py  quality_assessor.py  stream_converter.py  unified_converter.py  utils.py
Script/pdf-to-md-engine/src/templates/: chapter.md.j2
Script/pdf-to-md-engine/tools/: md2pdf.sh
(+875 files in other folders)
