[project]
name = "pdf-to-md-engine"
version = "1.0.0"
dependencies = [
    "docling",
    "pydantic-settings",
    "jinja2",
    "loguru",
    "tqdm",
    "torch",
    "torchvision",
    # OCR engines for better performance
    "onnxruntime",
    "easyocr",
    "tesserocr",
    # GPU acceleration
    "onnxruntime-gpu",
    # Additional performance packages
    "numpy",
    "pillow",
    "opencv-python"
]