[project]
name = "pdf-to-md-engine"
version = "1.0.0"
dependencies = [
    "docling",
    "pydantic-settings",
    "jinja2",
    "loguru",
    "tqdm",
    "torch",
    "torchvision",
    "psutil",
    # High-precision OCR engines
    "easyocr",
    "pytesseract",
    "tesseract",
    "paddlepaddle",
    "paddleocr",
    # Additional performance packages
    "numpy",
    "pillow",
    "opencv-python",
    "scikit-image"
]