[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-md-engine"
version = "2.0.0"
description = "Enhanced PDF to Markdown converter with improved text extraction, chapter detection, and OCR integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PDF-to-MD Engine", email = "dev@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - always required
dependencies = [
    "docling>=2.0.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "chardet>=5.0.0",
    "ftfy>=6.1.0",
]

[project.optional-dependencies]
# OCR engines - install based on your needs and system capabilities
ocr-full = [
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
]

# Individual OCR engines for selective installation
easyocr = [
    "easyocr>=1.7.0",
    "opencv-python>=4.8.0",
]

tesseract = [
    "pytesseract>=0.3.10",
]

# Performance optimizations
performance = [
    "scipy>=1.10.0",
    "numba>=0.57.0",
    "scikit-image>=0.21.0",
]

# GPU acceleration (CUDA)
gpu = [
    "torch[cuda]>=2.0.0",
    "torchvision[cuda]>=0.15.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# All optional dependencies
all = [
    "pdf-to-md-engine[ocr-full,performance,gpu,dev]"
]

[project.scripts]
pdf-to-md = "main:main"

[project.urls]
Homepage = "https://github.com/your-org/pdf-to-md-engine"
Repository = "https://github.com/your-org/pdf-to-md-engine"
Documentation = "https://github.com/your-org/pdf-to-md-engine/blob/main/README.md"
Issues = "https://github.com/your-org/pdf-to-md-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"